--- a/.github/workflows/deploy__auto-merge--main.yaml
+++ b/.github/workflows/deploy__auto-merge--main.yaml
@@ -24,5 +24,5 @@ jobs:
       - name: Merge main into deploy
         run: |
           git checkout deploy
-          git merge --no-ff main -m "Automated merge from main to deploy"
+          git merge main --allow-unrelated-histories -m "Automated merge from main to deploy"
           git push origin deploy
